<resources>
    <string name="app_name">MyAndLab</string>
    <string name="btnFourbtn1">Four Button(p103)</string>
    <string name="btnFourbtn2">Four Button(p103, 리니어 레이아웃)</string>
    <string name="goNaverHome">네이버 홈페이지 열기</string>
    <string name="calling911">911 응급전화 열기</string>
    <string name="openPhoto">갤러리 열기</string>
    <string name="back">돌아가기</string>
    <string name="btncal">심플 계산기(p176, 위젯)</string>
    <string name="btnbasicwidget">기본위젯연습(p.185, 위젯)</string>
    <string name="bulb">천정등</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="androidPhone">안드로이드폰</string>
    <string name="iPhone">아이폰</string>
    <string name="windowPhone">윈도폰</string>
    <string name="LovelyPetApp">애완동물 사진보기 앱</string>
    <string name="rotate">Rotate</string>
    <string name="rotateImage">이미지 회전하기</string>
    <string name="NoXmlButton">코드로 만든 버튼</string>
    <string name="Botton_datetimebook">시간예약</string>
    <string name="Button_datetimebook">datetime</string>
    <string name="Button_ViewFilpper">뷰플리퍼</string>
</resources>